--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Camila Cruz
-configuracion.autor.email=camilacz@ibm.com
+configuracion.autor.nombre=Jhon Doe
+configuracion.autor.email=jhondoe@email.com
